src/tests/snapshots/niri__tests__window_opening__check_target_size@fsT-omT-ofT-wfsAN-t.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AN\nconfig:\nwindow-rule {\n    open-fullscreen true\n    open-maximized true\n    open-floating true\n    default-column-display \"tabbed\"\n}\n\nlayout {\n    tab-indicator {\n        place-within-column\n    }\n}"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1280 × 720, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen]
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen, Activated]

unfullscreen configure:
size: 0 × 0, bounds: 1280 × 720, states: [Activated]
